Fixed slight alignment of top left text

--- a/src/pages/navbar/navbar.scss
+++ b/src/pages/navbar/navbar.scss
@@ -78,7 +78,7 @@ div.navbar-header a{
   color: #f1ffe0;
   float: left;
   height: 40px;
-  padding: 16px 0 0 13px;
+  padding: 18px 0 0 13px;
   line-height: 25px;
   text-align: center;
 }
